Add fan, temp sensor, communicate, monitoring

--- a/TwinPro/temp_monitorring_device/temp_monitorring_device/temp_monitorring_device.vcxproj.filters
+++ b/TwinPro/temp_monitorring_device/temp_monitorring_device/temp_monitorring_device.vcxproj.filters
@@ -668,10 +668,19 @@
     <ClInclude Include="device.hpp">
       <Filter>Header files</Filter>
     </ClInclude>
-    <ClInclude Include="io.hpp">
+    <ClInclude Include="uart.hpp">
       <Filter>Header files</Filter>
     </ClInclude>
-    <ClInclude Include="uart.hpp">
+    <ClInclude Include="temperature_sensor.hpp">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="communicate.hpp">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="fan.hpp">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="monitoring.hpp">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
